[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/fonts/Adventurer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/main/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://menus/main/assets/wisp/wisp_00.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0823529, 0.337255, 0.439216, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 189.0
margin_top = 207.0
margin_right = 1730.0
margin_bottom = 872.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1541.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 1541.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0.0352941, 0.137255, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Wisp's and magic"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1541.0
margin_bottom = 665.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 522.0
margin_right = 1019.0
margin_bottom = 461.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 497.0
margin_bottom = 151.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 75.0
margin_right = 422.0
margin_bottom = 151.0

[node name="NavText" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 347.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorSprite" type="Sprite" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
position = Vector2( -56, 68 )
texture = ExtResource( 3 )

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 155.0
margin_right = 497.0
margin_bottom = 306.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 497.0
margin_bottom = 151.0

[node name="SelectorSprite" type="Sprite" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
position = Vector2( -52, 59 )
texture = ExtResource( 3 )

[node name="NavText" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 497.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 310.0
margin_right = 497.0
margin_bottom = 461.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 112.0
margin_right = 384.0
margin_bottom = 151.0

[node name="SelectorSprite" type="Sprite" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
position = Vector2( -74, 74 )
texture = ExtResource( 3 )

[node name="NavText" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 272.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
